--- a/app/app.css
+++ b/app/app.css
@@ -39,6 +39,7 @@
   --chart-5: oklch(0.769 0.188 70.08);
 
   --radius: 0.625rem;
+  --header-height: calc(var(--spacing) * 12 + 1px);
 
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
