--- a/app/app.css
+++ b/app/app.css
@@ -1,6 +1,24 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
+@custom-variant dark {
+  &:where(.dark *, .dark) {
+    @slot;
+  }
+
+  &:where(.system *, .system) {
+    @media (prefers-color-scheme: dark) {
+      @slot;
+    }
+  }
+}
+
+@theme {
+  --font-sans:
+    'Inter', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
 :root {
   /* Define light theme color values */
   --background-light: oklch(1 0 0);
@@ -45,14 +63,14 @@
   --sidebar-border-light: oklch(0.922 0 0);
   --sidebar-ring-light: oklch(0.708 0 0);
 
-  /* Define dark theme color values (only once!) */
+  /* Define dark theme color values */
   --background-dark: oklch(0.145 0 0);
   --foreground-dark: oklch(0.985 0 0);
 
   --card-dark: oklch(0.205 0 0);
   --card-foreground-dark: oklch(0.985 0 0);
 
-  --popover-dark: oklch(0.269 0 0);
+  --popover-dark: oklch(0.205 0 0);
   --popover-foreground-dark: oklch(0.985 0 0);
 
   --primary-dark: oklch(0.6451 0.2132 21.54);
@@ -64,7 +82,7 @@
   --muted-dark: oklch(0.269 0 0);
   --muted-foreground-dark: oklch(0.708 0 0);
 
-  --accent-dark: oklch(0.371 0 0);
+  --accent-dark: oklch(0.269 0 0);
   --accent-foreground-dark: oklch(0.985 0 0);
 
   --destructive-dark: oklch(0.704 0.191 22.216);
@@ -86,7 +104,7 @@
   --sidebar-accent-dark: oklch(0.269 0 0);
   --sidebar-accent-foreground-dark: oklch(0.985 0 0);
   --sidebar-border-dark: oklch(1 0 0 / 10%);
-  --sidebar-ring-dark: oklch(0.439 0 0);
+  --sidebar-ring-dark: oklch(0.556 0 0);
 
   /* Active variables - default to light */
   --background: var(--background-light);
@@ -291,8 +309,134 @@
   * {
     @apply border-border outline-ring/50;
   }
-  html,
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-Thin.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: italic;
+  font-weight: 100;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-ThinItalic.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 200;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-ExtraLight.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: italic;
+  font-weight: 200;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-ExtraLightItalic.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-Light.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-LightItalic.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-Regular.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-Italic.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-Medium.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: italic;
+  font-weight: 500;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-MediumItalic.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-SemiBold.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: italic;
+  font-weight: 600;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-SemiBoldItalic.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-Bold.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: italic;
+  font-weight: 700;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-BoldItalic.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 800;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-ExtraBold.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: italic;
+  font-weight: 800;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-ExtraBoldItalic.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-Black.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: italic;
+  font-weight: 900;
+  font-display: swap;
+  src: url('/fonts/inter/Inter-BlackItalic.woff2') format('woff2');
 }
