--- a/app/app.css
+++ b/app/app.css
@@ -151,6 +151,8 @@
 
   --radius: 0.625rem;
   --header-height: calc(var(--spacing) * 12 + 1px);
+
+  --gray: oklch(0.99 0 0);
 }
 
 .dark {
@@ -248,6 +250,7 @@
 }
 
 @theme inline {
+  --color-gray: var(--gray);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
